# LegalRAG

./: README.md  data_parser.py  db_analysis.json  db_analysis.py  eval.py  evaluation.py  explore_eval.ipynb  ingest_cases.py  main.py  pyproject.toml  requirements.txt
benchmark_models/: benchmark_utils.py  models.py  rag_executor.py
case_embeddings/: case_chunker.py
clients/: __init__.py  courtListener_client.py  graphiti_client.py
immigration_test/: generate_test_cases.py
models/: __init__.py  config.py  entities.py  relations.py
prompts/: __init__.py  immigration_prompts.py
providers/: __init__.py  base.py  gemini.py  hugging_face.py  openai.py  registry.py
results/generation/: cbr_retrieval_k3_unified.csv  lawRAG_retrieval_k.csv  naive_retrieval_k3.csv  no_rag_llm.csv
results/generation/eval_results/: cbr_retrieval_k3_unified_eval_results.csv  lawRAG_retrieval_k_eval_results.csv  naive_retrieval_k3_eval_results.csv  no_rag_llm_eval_results.csv
scripts/: cluster_visualizer.py  gemini_batch_ai_studio.py  gemini_prompt.py  ingest_us_code.py  neo4j_integration_uscode.py  us_code_extracter.py  uslm_converter.py  xml_extractor.py  xml_processor.py
scripts/data_structure/: graph.py  node.py
services/: __init__.py  case_service.py  chatbot_service.py
testing/data/: immigration_test_dataset.json
testing/results/: results.json
us_code_embeddings/: us_code_chunker.py
