[project]
name = "cs6220-legalrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "fonttools>=4.61.0",
    "google-genai>=1.51.0",
    "graphiti-core[google-genai]>=0.22.0",
    "ipykernel>=7.1.0",
    "kiwisolver>=1.4.9",
    "langchain>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-google-genai>=3.0.3",
    "langgraph>=1.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pympler>=1.1",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.1",
    "xmltodict>=1.0.2",
]
